# Hytale-Mod-Updater

./: .gitignore  Changelog.md  LICENSE  README.md  build.py  hook-numpy.py  hook-tkinter.py  pyi_rth_platform.py  pyproject.toml  requirements.txt
src/: main.py
src/config/: __init__.py  paths.py  settings.py
src/core/: __init__.py  app.py  theme_manager.py
src/os_detector/: __init__.py  platform_detector.py
src/services/: __init__.py  backup_manager.py  cfwidget_api.py  curseforge_api.py  keyring_manager.py  mod_database_manager.py  mod_downloader.py  mod_id_matcher.py  mod_id_store.py  playwright_downloader.py  playwright_thread_manager.py  update_checker.py
src/ui/: __init__.py  app_window.py  dialogs.py  settings_handlers.py
src/utils/: __init__.py  file_loader.py  fingerprint.py  logging.py
